# LoopSubDivision

./: CMakeLists.txt  DirectedEdgeSurface.cpp  DirectedEdgeSurface.h  RenderController.cpp  RenderController.h  RenderWindow.cpp  RenderWindow.h  main.cpp
resultFiles/: tetrahedron_sub_division_by_2.diredgenormal  tetrahedron_sub_division_by_time_2.diredgenormal
